# ChangeLog for net-analyzer/packit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/packit/ChangeLog,v 1.23 2010/01/01 17:44:33 fauli Exp $

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> packit-1.0-r1.ebuild:
  Transfer Prefix keywords

  06 Feb 2008; Fabian Groffen <grobian@gentoo.org> packit-1.0-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*packit-1.0-r1 (10 Oct 2006)

  10 Oct 2006; Markus Ullmann <jokey@gentoo.org>
  +files/packit-1.0-noopt.patch, +files/packit-1.0-nostrip.patch,
  -packit-1.0.ebuild, +packit-1.0-r1.ebuild:
  Fix for segv bug #148094 thanks to Sergio Rubio for needed patch

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> packit-1.0.ebuild:
  Removing virtual/libpcap wrt bug #117898

  10 Jan 2006; Marcelo Goes <vanquirius@gentoo.org> packit-1.0.ebuild:
  Use virtual/libpcap for bug 117745. Thanks to Michael Zanetta <grimmlin at
  pentoo dot ch>.

  09 Oct 2005; <mkay@gentoo.org> packit-1.0.ebuild:
  Adding libpcap to dependencies. Closing bug #108117

  06 May 2005; Sven Wegener <swegener@gentoo.org> packit-1.0.ebuild:
  Removed * postfix from <, <=, >= and > dependencies.

  17 Apr 2005; Marcelo Goes <vanquirius@gentoo.org> packit-1.0.ebuild:
  Fix a header problem with libpcap. Thanks to soulse for testing the fix.

  09 Mar 2005; Michael Sterrett <mr_bones_@gentoo.org> -packit-0.7.ebuild:
  clean old broken ebuild

  29 Jan 2005; Daniel Black <dragonheart@gentoo.org> packit-0.7.ebuild,
  packit-1.0.ebuild:
  moved to virtual/libpcap dependancy

  16 Aug 2004; Eldad Zack <eldad@gentoo.org> -packit-0.6.0c-r1.ebuild,
  packit-1.0.ebuild:
  x86 stable

  27 Jul 2004; Alexander Plank <alexander@gentoo.org> packit-1.0.ebuild:
  Added to ~macos (~ because fink libnet conflicts with it). Builds, but doesn't 
seem to get added to the path.

  17 Jul 2004; David Holm <dholm@gentoo.org> packit-1.0.ebuild:
  Added to ~ppc.

*packit-1.0 (12 Jul 2004)
