@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/packit
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/packit/ChangeLog,v 1.23 2010/01/01 17:44:33 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/packit/ChangeLog,v 1.24 2010/09/15 02:01:55 jer Exp $
+
+  15 Sep 2010; Jeroen Roovers <jer@gentoo.org> packit-1.0-r1.ebuild:
+  Fix HOMEPAGE and SRC_URI.
 
   01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> packit-1.0-r1.ebuild:
   Transfer Prefix keywords
